--- a/styles/modules/_cart.css
+++ b/styles/modules/_cart.css
@@ -1,7 +1,6 @@
 .cart {
   &--empty {
-    margin: 2rem 0;
-    text-align: center;
+    @apply my-8 text-center;
   }
 
   &--footer {
@@ -10,68 +9,47 @@
 }
 
 .cart-item {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
+  @apply flex flex-wrap relative;
 
   &:not(:last-child) {
-    margin-bottom: 1rem;
+    @apply mb-4;
   }
 
   &--photo {
-    flex-basis: 35%;
+    @apply relative m-0 w-1/3;
     max-width: 10rem;
-    position: relative;
-    margin: 0;
   }
 
   &--details {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    flex-direction: column;
-    padding-left: 1rem;
+    @apply flex flex-col flex-grow pl-4;
   }
 
   &--header {
-    display: flex;
+    @apply flex;
   }
 
   &--link {
-    display: block;
-    color: inherit;
+    @apply block text-current;
 
     &::after {
+      @apply block absolute inset-0 z-10;
       content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 2;
     }
   }
 
   &--title {
-    flex: 1;
-    margin: 0;
+    @apply flex-1 m-0;
   }
 
   &--price {
-    margin-left: 1rem;
+    @apply ml-4;
   }
 
   &--variant {
-    font-size: .75rem;
+    @apply text-xs;
   }
 
   &--tools {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    z-index: 2;
-    margin-top: auto;
+    @apply flex justify-between relative z-10 mt-auto;
   }
 }
