--- a/styles/base/_media.css
+++ b/styles/base/_media.css
@@ -1,4 +1,4 @@
-.is-aspect {
+.has-ar {
   @apply relative overflow-hidden;
   
   &--square {
@@ -27,7 +27,7 @@
   &.has-error {
     &::after {
       @apply absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 text-center text-4xl;
-      content: '#$!';
+      content: "#$!";
     }
 
     img {
@@ -37,14 +37,16 @@
 }
 
 img.photo {
-  @apply block absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 scale-125 object-cover opacity-0 z-10;
-  width: calc(100% + 1px);
-  height: calc(100% + 1px);
+  @apply block absolute top-1/2 left-1/2 object-cover z-10 opacity-0;
+  width: calc(100% + 1px); /* helps with half pixel renderings */
+  height: calc(100% + 1px); /* helps with half pixel renderings */
+  transform: translate3d(-50%,-50%,0) scale(1.25);
   transition: opacity .15s linear, transform 1s cubic-bezier(.215,.61,.355,1);
 
   &.is-loaded,
   .is-loaded & {
-    @apply opacity-100 transform-gpu -translate-x-1/2 -translate-y-1/2 scale-100;
+    @apply opacity-100;
+    transform: translate3d(-50%,-50%,0) scale(1);
     animation: revealUp .6s cubic-bezier(0.85, 0, 0.15, 1) both;
   }
 }
@@ -53,7 +55,7 @@ img.photo {
   @apply absolute inset-0;
   
   iframe {
-    @apply absolute bottom-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 w-screen min-h-screen;
+    @apply absolute top-1/2 left-1/2 transform-gpu -translate-x-1/2 -translate-y-1/2 w-screen min-h-screen;
   }
 }
 
@@ -63,23 +65,5 @@ img.photo {
   }
   to {
     clip-path: inset(0% 0 0 0);
-  }
-}
-
-@keyframes revealCenter {
-  from {
-    clip-path: inset(0 50% 0 50%);
-  }
-  to {
-    clip-path: inset(0 0% 0 0%);
-  }
-}
-
-@keyframes revealCircle {
-  from {
-    clip-path: circle(0%);
-  }
-  to {
-    clip-path: circle(75%);
   }
 }
