--- a/styles/components/_carousels.css
+++ b/styles/components/_carousels.css
@@ -16,15 +16,10 @@
   }
 
   &--thumbs {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    width: 5rem;
-    margin: .75rem;
+    @apply flex flex-col absolute top-0 w-20 m-3;
 
     button {
-      margin: .25rem;
+      @apply m-1;
 
       &.is-active {
         /* active state styles */
@@ -33,86 +28,50 @@
   }
 
   &--hud {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    overflow: hidden;
+    @apply flex flex-row items-center overflow-hidden;
   }
 
   &--nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    position: relative;
+    @apply flex flex-row flex-wrap justify-center relative;
 
     button {
-      display: block;
-      width: 1.5rem;
-      height: 1.5rem;
-      font-size: 1.5rem;
+      @apply block w-6 h-6 text-2xl;
       font-feature-settings: "tnum";
     }
   }
 
   &--status {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    margin-left: auto;
+    @apply flex-grow-0 flex-shrink flex flex-row items-center justify-center ml-auto;
   }
 
   &--counter {
-    position: relative;
-    height: 1rem;
-    margin: .5rem 0;
-    overflow: hidden;
+    @apply relative h-4 my-2 overflow-hidden;
     
     span {
-      display: block;
+      @apply block;
       font-feature-settings: "tnum";
   
-        + span {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
+      + span {
+        @apply absolute inset-x-0 top-0;
       }
     }
   }
 
   &--progress {
-    position: relative;
-    margin: 0 1rem;
-    width: 3rem;
-    height: 1px;
+    @apply relative mx-4 w-12 h-px;
     background: rgba(var(--pageText-rgb), .25);
 
     span {
-      display: block;
-      width: 100%;
-      height: 100%;
-      background: var(--pageText);
-      transform-origin: 0 0;
+      @apply block w-full h-full bg-pageText transform origin-left;
       transition: all .4s cubic-bezier(0.16, 1, 0.3, 1);
     }
   }
 
   &--dots {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
+    @apply absolute top-0 left-0 flex flex-col m-4;
     
     button {
-      width: .75rem;
-      height: .75rem;
-      background: currentColor;
-      margin-bottom: 5px;
+      @apply w-3 h-3 bg-current mb-1;
 
       &.is-active {
         /* active state styles */
