--- a/styles/components/_counters.css
+++ b/styles/components/_counters.css
@@ -1,52 +1,33 @@
 .counter {
-  display: inline-grid;
+  @apply inline-grid h-full;
   grid-template-columns: auto auto auto;
 
   &--down,
   &--up {
+    @apply m-0;
     appearance: textfield;
     -webkit-appearance: none; 
-    margin: 0;
   }
 
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
+    @apply m-0;
     -webkit-appearance: none;
-    margin: 0;
   }
   
   &--amount {
-    position: relative;
-    overflow: hidden;
-    width: 2rem;
+    @apply relative overflow-hidden w-8;
   }
 
   &--input {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;
+    @apply flex relative w-full h-full;
 
     + .counter--input {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
+      @apply absolute inset-x-0 top-0;
     }
     
     input {
-      position: relative;
-      background: none;
-      border: none;
-      border-radius: 0;
-      -webkit-appearance: none;
-      outline: none;
-
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      color: inherit;
+      @apply relative bg-transparent border-0 rounded-none appearance-none p-0 w-full h-full text-center text-current;
       font-feature-settings: "tnum";
     }
   }
