--- a/styles/base/_page.css
+++ b/styles/base/_page.css
@@ -15,4 +15,20 @@ body {
   &.is-error {
     @apply min-h-screen flex flex-col items-center justify-center text-center;
   }
+
+  &--wrapper {
+    @apply px-2 md:px-4;
+  }
+
+  &--content {
+    @apply mx-auto max-w-3xl;
+  }
+
+  &--title {
+    @apply mb-4;
+
+    &.has-action {
+      @apply flex items-center justify-between;
+    }
+  }
 }
