--- a/styles/components/_counters.css
+++ b/styles/components/_counters.css
@@ -11,8 +11,7 @@
 
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
-    @apply m-0;
-    -webkit-appearance: none;
+    @apply m-0 appearance-none;
   }
   
   &--amount {
@@ -32,7 +31,7 @@
     @apply flex relative w-full h-full;
 
     + .counter--input {
-      @apply absolute inset-x-0 top-0;
+      @apply absolute inset-0;
     }
     
     input {
